--- a/templates/admin/messages.html
+++ b/templates/admin/messages.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="container messagesBody">
     <div>
-        <a href="{% url 'adminSite:sendMessage' %}" class="sendMessageButton"><button class="btn btn-primary sendMessageButton"><i class="fa fa-paper-plane"></i>Wyślij wiadomość</button></a>
+        <a href="{% url 'adminSite:sendMessage' %}" class="sendMessageButton"><button class="btn btn-primary sendMessageButton mt-2"><i class="fa fa-paper-plane pr-2"></i>Wyślij wiadomość</button></a>
         <h1>Wiadomości</h1>
     </div>
     <form>
