--- a/templates/admin/responses.html
+++ b/templates/admin/responses.html
@@ -3,26 +3,30 @@
 {% block content %}
 <div class="container responseContent">
     <h1 align="center">Rozwiązania</h1>
-    <table class="table-striped table-dark">
-        <thead>
-            <tr>
-                <th>#
-                <th>Student
-                <th>Grupa
-                <th>Data
-            </tr>
-        </thead>
-        <tbody>
-            {% for answer in answers%}
-            <tr class="col-1">
-                <td>{{answer.id}} </td>
-                <td><a class="redirectClick" href="{% url 'adminSite:editStudent' answer.student_id %}" title="Pokaż {{answer.student}}">{{answer.student}}</a> </td>
-                <td><a class="redirectClick" href="{% url 'adminSite:groupDetails' answer.group_id %}" title="Pokaż grupę '{{answer.group_name}}'">{{answer.group_name}}</a> </td>
-                <td>{{answer.date}} </td>
-                <td><a href="{% url 'adminSite:responseDetails' answer.id %}"><button class="btn btn-danger">Oceń</button></a> </td>
-            </tr>
-            {% endfor%}
-        </tbody>
-    </table>
+    {% if answers.Count > 0 %}
+        <table class="table-striped table-dark">
+            <thead>
+                <tr>
+                    <th>#
+                    <th>Student
+                    <th>Grupa
+                    <th>Data
+                </tr>
+            </thead>
+            <tbody>
+                {% for answer in answers%}
+                <tr class="col-1">
+                    <td>{{answer.id}} </td>
+                    <td><a class="redirectClick" href="{% url 'adminSite:editStudent' answer.student_id %}" title="Pokaż {{answer.student}}">{{answer.student}}</a> </td>
+                    <td><a class="redirectClick" href="{% url 'adminSite:groupDetails' answer.group_id %}" title="Pokaż grupę '{{answer.group_name}}'">{{answer.group_name}}</a> </td>
+                    <td>{{answer.date}} </td>
+                    <td><a href="{% url 'adminSite:responseDetails' answer.id %}"><button class="btn btn-danger">Oceń</button></a> </td>
+                </tr>
+                {% endfor%}
+            </tbody>
+        </table>
+    {% else %}
+        <h4 class="pt-4 pb-4 font-italic" align="center">Nie ma jeszcze żadnych rozwiązań</h4>
+    {% endif %}
 </div>
 {% endblock %}
