--- a/templates/main/messages.html
+++ b/templates/main/messages.html
@@ -28,7 +28,7 @@
             {% else %}
             <td><b>{{message.title}}</b></td>
             {% endif %}
-            <td class="messageTableButton"><button type="submit" name="message" value="{{message.id}}">Otwórz</button></td>
+            <td class="messageTableButton"><button type="submit" name="message" value="{{message.id}}" style="background: none; border: none">Otwórz</button></td>
             <td class="messageTableButton">Usuń</td>
             
           </tr>
