--- a/static/css/admin/messages.css
+++ b/static/css/admin/messages.css
@@ -1,3 +1,6 @@
+.faqContainer{
+    border: 2px solid red;
+ }
 .messagesBody{
     padding-bottom: 60px;
     width: auto;
@@ -92,7 +95,6 @@
 .sendMessageButton i{
     margin-right: 10px;
 }
-
 
 @media screen and (max-width: 1300px){
     .messagesBody{
