--- a/static/css/settings.css
+++ b/static/css/settings.css
@@ -1,14 +1,24 @@
 .settingsContent button{
     display: block;
     margin: 20px auto 20px auto;
-    width: 200px;
+    width: 300px;
     height: 50px;
     background-color: orange;
     border-radius: 20px;
     box-shadow: 3px 3px;
     font-size: 2rem;
     border: 1px solid rgb(201, 201, 201);
+    text-decoration: none;
+    color: #3b3b3b;
 }
+.settingsContent button:focus{
+    outline: none;
+}
+.settingsContent a{
+    text-decoration: none;
+    width: 300px;
+}    
 .settingsContent button:hover{
     background-color: rgb(255, 214, 81);
+    text-decoration: none!important;
 }
