--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -33,7 +33,11 @@
                     <li id="excercises"><i class="fa fa-briefcase"></i><a href="/adminSite/excercises">Ćwiczenia</a></li>
                     <li id="challenges"><i class="fa fa-bell"></i><a href="/adminSite/challenges">Wyzwania</a></li>
                     <li id="responses"><i class="fa fa-pencil"></i><a href="/adminSite/responses">Rozwiązania</a></li>
-                    <li id="messages"><i class="fa fa-envelope"></i><a href="/adminSite/messages">Wiadomości</a></li>
+                    <li id="messages" class="                        
+                    {% if new_msg %}
+                    alert-link 
+                    {%endif%}
+                    "><i class="fa fa-envelope"></i><a href="/adminSite/messages">Wiadomości</a></li>
                     <li id="edit"><i class="fa fa-edit"></i><a href="#">Edycja</a></li>
                     <li><i class="fa fa-sign-out"></i><a href="{% url 'login:logout' %}">Wyloguj</a></li>
                 </ul>
