--- a/templates/admin/readMessage.html
+++ b/templates/admin/readMessage.html
@@ -6,14 +6,16 @@
         <a href="{% url 'adminSite:messages' %}" class="sendMessageButton"><i
                     class="fa fa-arrow-left"></i></a>
         <h1>Wiadomość</h1>
+        <span class="badge badge-pill badge-light">Wysłano {{message.date}}</span>
         <div class="messageContent">
-            <h4 class="pb-4">Adresat: <b>Mateusz Nowacki</b></h4>
+            <h4 class="pb-4">Adresat: <b>{{message.from_user_name}}</b></h4>
             <h4>Temat:</h4>
-            <p>sssssssssssss das adsa ads asd a dsads asd asd as</p>
+            <p>{{message.title}}</p>
+            
             <h4>Treść:</h4>
-            <p>asdasdasdvadbfas vdfasdfvsadfv adsfvsadfsssssssssssssssssssssssssssssssssss asdvsadfsssssssssssssssssssssssssssssssssssssssssss vdsavfsa dfasvdfa svsadfv asdfvads dsaf asdf ds </p>
+            <p>{{message.content}}</p>
             <div class="mt-4" align="center">
-                <a href="{% url 'adminSite:sendMessage' %}" class=""><button class="btn btn-primary"><i
+                <a href="{% url 'adminSite:sendMessage' message.id %}" class=""><button class="btn btn-primary"><i
                             class="fa fa-paper-plane"></i>Odpowiedz</button></a>
             </div>
             
