--- a/templates/admin/sendMessage.html
+++ b/templates/admin/sendMessage.html
@@ -8,6 +8,11 @@
     </div>
     <form>
         <div class="form-group">
+            {% if message %}
+            <label for="recipient">Odbiorca</label>
+            <input type="text" class="form-control" id="recipient" name="recipient" value="{{message.from_user_name}}" disabled
+                    required maxlength="80">
+            {%else%}
             <label for="recipient">Wybierz odbiorcę</label>
             <select class="form-control" id="recipient" required>
                 <option>1</option>
@@ -16,16 +21,24 @@
                 <option>4</option>
                 <option>5</option>
             </select>
+            {% endif %}
         </div>
         <div class="form-group">
             <label for="messageTopic">Temat wiadomości</label>
+            {% if message %}
+                <input type="text" class="form-control" id="messageTopic" value="{{message.title}}" disabled
+                    required maxlength="80">
+            {% else %}
             <input type="text" class="form-control" id="messageTopic" placeholder="Wpisz temat wiadomości.." autofocus
                 required maxlength="80">
+            {%endif%}
         </div>
         <div class="form-group">
             <label for="messageContent">Treść wiadomości</label>
+            
             <textarea class="form-control" id="messageContent" rows="5" placeholder="Tu wpisz swoją wiadomość..."
-                required maxlength="500"></textarea>
+                required maxlength="500"{% if message %} autofocus {%endif%} ></textarea>
+            
         </div>
         <div align="center">
             <button type="submit" class="btn btn-primary" title="Wyślij wiadomość">Wyślij</button>
