Messages view fix, open stages
With error ! ! !

--- a/static/css/messages.css
+++ b/static/css/messages.css
@@ -31,6 +31,9 @@ table {
 .messageTableButton{
     cursor: pointer;
 }
+.messageTableButton button{
+    width: 100%;
+}
 .messageTableButton:hover{
     background-color: orangered !important;
 }
