--- a/templates/admin/readMessage.html
+++ b/templates/admin/readMessage.html
@@ -6,14 +6,14 @@
         <a href="{% url 'adminSite:messages' %}" class="sendMessageButton"><i
                     class="fa fa-arrow-left"></i></a>
         <h1>Wiadomość</h1>
-        <span class="badge badge-pill badge-light">Wysłano {{message.date}}</span>
         <div class="messageContent">
-            <h4 class="pb-4">Adresat: <b>{{message.from_user_name}}</b></h4>
+            <h4>Adresat: <b class="font-italic">{{message.from_user_name}}</b></h4>
+            <span class="badge badge-pill badge-light mb-4 text-muted font-italic">{{message.date}}</span>
             <h4>Temat:</h4>
-            <p>{{message.title}}</p>
+            <input type="text" class="form-control" value="{{message.title}}" disabled>
             
             <h4>Treść:</h4>
-            <p>{{message.content}}</p>
+            <input type="text" class="form-control" value="{{message.content}}" disabled>
             <div class="mt-4" align="center">
                 <a href="{% url 'adminSite:sendMessage' message.id %}" class=""><button class="btn btn-primary"><i
                             class="fa fa-paper-plane"></i>Odpowiedz</button></a>
