--- a/templates/admin/sendMessage.html
+++ b/templates/admin/sendMessage.html
@@ -10,7 +10,8 @@
         <div class="form-group">
             {% if message %}
             <label for="recipient">Odbiorca</label>
-            <input type="text" class="form-control" id="recipient" name="recipient" value="{{message.from_user_name}}" disabled
+            <input type="hidden" name="recipient" value="{{message.from_user_id}}"/>
+            <input type="text" class="form-control" id="recipient"  value="{{message.from_user_name}}" disabled
                     required maxlength="80">
             {%elif receivers %}
                 <label for="recipient">Wybierz odbiorcę</label>
@@ -19,6 +20,11 @@
                         <option value="{{receiver.student_id}}">{{receiver.student_name}} - {{receiver.student_index}}</option>
                     {% endfor%}
                 </select>
+            {% elif student %}
+            <label for="recipient">Odbiorca</label>
+            <input type="hidden" name="recipient" value="{{student.id}}"/>
+            <input type="text" class="form-control" id="recipient"  value="{{student_name}}" disabled
+                    required maxlength="80">
             {% else %}
                 <p> Nie prowadzisz żadnej grupy !</p>
             {% endif %}
