--- a/templates/main/base.html
+++ b/templates/main/base.html
@@ -61,11 +61,11 @@
                     <div class="row">
                         <div class="col-6 text-center">
                             <img class="rankImg" src="/static/img/rank.png">
-                            <div class="centered number-font">12</div>
+                            <div class="centered number-font">{{global_rank}}</div>
                         </div>
                         <div class="col-6 text-center">
                             <img class="rankImg" src="/static/img/rank.png">
-                            <div class="centered number-font">2</div>
+                            <div class="centered number-font">{{group_rank}}</div>
                         </div>
                     </div>
                     <div class="row">
