--- a/templates/admin/sendMessage.html
+++ b/templates/admin/sendMessage.html
@@ -6,13 +6,15 @@
         <a class="backLink" href="{% url 'adminSite:messages' %}" title="Wstecz"><i class="fa fa-arrow-left"></i></a>
         <h1 align="center">Nowa wiadomość</h1>
     </div>
-    <form>
+    <form action="{% url 'adminSite:messages' %}" method="POST">
+        {% csrf_token %}
         <div class="form-group">
             {% if message %}
             <label for="recipient">Odbiorca</label>
             <input type="hidden" name="recipient" value="{{message.from_user_id}}"/>
             <input type="text" class="form-control" id="recipient"  value="{{message.from_user_name}}" disabled
                     required maxlength="80">
+                    <input type="hidden" name="answer_id" value="{{message.id}}"/>
             {%elif receivers %}
                 <label for="recipient">Wybierz odbiorcę</label>
                 <select class="form-control" id="recipient" name="recipient" required>
@@ -20,11 +22,13 @@
                         <option value="{{receiver.student_id}}">{{receiver.student_name}} - {{receiver.student_index}}</option>
                     {% endfor%}
                 </select>
-            {% elif student %}
+                <input type="hidden" name="newMessage" value="newMessage"/>
+            {% elif to %}
             <label for="recipient">Odbiorca</label>
-            <input type="hidden" name="recipient" value="{{student.id}}"/>
-            <input type="text" class="form-control" id="recipient"  value="{{student_name}}" disabled
+            <input type="hidden" name="recipient" value="{{to.id}}"/>
+            <input type="text" class="form-control" id="recipient"  value="{{to.name}}" disabled
                     required maxlength="80">
+            <input type="hidden" name="newMessage" value="newMessage"/>
             {% else %}
                 <p> Nie prowadzisz żadnej grupy !</p>
             {% endif %}
@@ -32,17 +36,17 @@
         <div class="form-group">
             <label for="messageTopic">Temat wiadomości</label>
             {% if message %}
-                <input type="text" class="form-control" id="messageTopic" value="{{message.title}}" disabled
+                <input type="text" class="form-control" id="messageTopic" name="messageTopic" value="{{message.title}}" disabled
                     required maxlength="80">
             {% else %}
-            <input type="text" class="form-control" id="messageTopic" placeholder="Wpisz temat wiadomości.." autofocus
+            <input type="text" class="form-control" id="messageTopic" name="messageTopic" placeholder="Wpisz temat wiadomości.." autofocus
                 required maxlength="80">
             {%endif%}
         </div>
         <div class="form-group">
             <label for="messageContent">Treść wiadomości</label>
             
-            <textarea class="form-control" id="messageContent" rows="5" placeholder="Tu wpisz swoją wiadomość..."
+            <textarea class="form-control" id="messageContent" name="messageContent" rows="5" placeholder="Tu wpisz swoją wiadomość..."
                 required maxlength="500"{% if message %} autofocus {%endif%} ></textarea>
             
         </div>
