--- a/templates/main/newMessage.html
+++ b/templates/main/newMessage.html
@@ -13,8 +13,8 @@
                 <div class="form-group">
                     <label for="messageTopic">Temat wiadomości</label>
                     {% if message %}
-                    <input type="hidden" name="answer_to_message" value="{{message.id}}">
-                    <input type="text" disabled value="{{message.title}}" class="form-control" name="messageTopic" id="messageTopic"
+                    <input type="hidden" name="messageTopic" value="{{message.id}}">
+                    <input type="text" disabled value="{{message.title}}" class="form-control" id="messageTopic"
                         required minlength="5">
                     {% else %}
                     <input type="text" class="form-control" id="messageTopic" name="messageTopic" placeholder="Wpisz temat wiadomości.."
