--- a/static/css/login.css
+++ b/static/css/login.css
@@ -71,7 +71,13 @@ text-decoration: none;
 .message{
     margin-top: 20px;
     margin-bottom: 0;
-    position: relative;
+    width: 300px;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    margin-top: 180px;
 }
 .alt {
     border: 1px solid red;
