--- a/templates/main/playerProfile.html
+++ b/templates/main/playerProfile.html
@@ -120,7 +120,7 @@
             <!-- MEDALE -->
             <div id="medals" class="tab-pane fade">
                 <h3 class="text-center">Medale</h3>
-                {% if achievements == none %}
+                {% if achievements.count == 0 %}
                     <p>Aktualnie nie posiadasz żadnych medali.</p>
                 {% else %}
                     <div class="table-responsive">
