--- a/templates/login/index.html
+++ b/templates/login/index.html
@@ -27,12 +27,12 @@
             <small>Nie masz konta? <a href="/register" class="alert-link">Zarejestruj się</a></small>
 
             <div id="lower">
-                <input type="submit" value="Zaloguj"class="logButton">
+                <input type="submit" value="Zaloguj" class="logButton">
             </div>
         </form>
     </section>
     {% if message %}
-    <p class="alert alert-danger message">{{ message }}</p>
+    <div class="alert alert-danger message">{{ message }}</div>
     {% endif %}
 
 </body>
