--- a/templates/admin/groupDetails.html
+++ b/templates/admin/groupDetails.html
@@ -49,7 +49,11 @@
                 </tbody>
             </table>
         {% else %}
-            <div class="alert alert-warning" role="alert"> Brak studentów w grupie </div>
+            <div class="alert alert-warning alert-dismissible fade show" role="alert"> Brak studentów w grupie 
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
         {% endif %}
         <button class="btn btn-primary btn-sm">Zapisz obecności</button>
     </div>
