--- a/templates/admin/groups.html
+++ b/templates/admin/groups.html
@@ -1,90 +1,92 @@
 {% extends "admin/base.html" %}
 
 {% block content %}
-    <div class="container groupsContainer">
-        <div class="row">
-            <div class="col-xl-4">
-                <h3>Grupy</h3>
-                {% if groups.count > 0 %}
-                    <table class="table table-hover table-dark table-stripped table-sm groupsTable">
-                        <thead>
-                            <tr>
-                            <th>Nazwa
-                            </tr>
-                        </thead>
-                        <tbody>
-                            {% for group in groups %}
-                                <tr>
-                                    <td>{{group.name}}
-                                    <td><a href="{% url 'adminSite:groupDetails' group.id %}"><button class="btn btn-primary">Pokaż</button></a>
-                                    <td><button class="btn btn-info">Edytuj</button>
-                                    <td><a href="{% url 'adminSite:deleteGroup' group.id %}"><button class="btn btn-danger">Usuń</button></a>
-                                    <td><button class="btn btn-basic">Napisz</button>
-                                </tr>
-                            {% endfor %}
-                        </tbody>
-                    </table>
-                {% else %}
-                    <div class="alert alert-warning" role="alert"> Brak prowadzonych grup</div>
-                {% endif %}
-                {% if message != None and message %}
-                    <div class="alert alert-success" role="alert"> Grupa pomyślnie utworzona </div>
-                {% elif message != None and message == False %}
-                    <div class="alert alert-danger" role="alert"> Grupa nie została utworzona </div>
-                {% endif %}
-                <h4 class="pt-4">Stwórz nową grupę</h4>
-                <form method="POST" action="{% url 'adminSite:addGroup' %}" enctype="multipart/form-data" class="addGroup">
-                    {% csrf_token %}
-                    <div class="form-group ">
-                        <label for="{{ form.groupName.id_for_label }}">Nazwa grupy</label>
-                        {{ form.groupName }}
-                        {{ form.groupFile }}
-                        <button type="submit" class="btn btn-primary" value="Submit">Stwórz grupę</button>
-                    </div>
-                </form>
+<div class="container groupsContainer">
+    <div class="row">
+        <div class="col-xl-4">
+            <h3>Grupy</h3>
+            {% if groups.count > 0 %}
+            <table class="table table-hover table-dark table-stripped table-sm groupsTable">
+                <thead>
+                    <tr>
+                        <th>Nazwa
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for group in groups %}
+                    <tr>
+                        <td>{{group.name}}
+                        <td><a href="{% url 'adminSite:groupDetails' group.id %}"><button class="btn btn-primary">Pokaż</button></a>
+                        <td><button class="btn btn-info">Edytuj</button>
+                        <td><a href="{% url 'adminSite:deleteGroup' group.id %}"><button class="btn btn-danger">Usuń</button></a>
+                        <td><button class="btn btn-basic">Napisz</button>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+            {% else %}
+            <div class="alert alert-warning alert-dismissible fade show" role="alert"> Brak prowadzonych grup
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
             </div>
-            <div class="col-xl-8">
-                <h3>Ranking Światowy</h3>
-                <table class="table table-hover table-dark table-stripped table-sm">
-                    <thead>
-                        <tr>
+            {% endif %}
+            {% if message != None and message %}
+            <div class="alert alert-success alert-dismissible fade show" role="alert"> Grupa pomyślnie utworzona
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            {% elif message != None and message == False %}
+            <div class="alert alert-danger alert-dismissible fade show" role="alert"> Grupa nie została utworzona
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            {% endif %}
+            <h4 class="pt-4">Stwórz nową grupę</h4>
+            <form method="POST" action="{% url 'adminSite:addGroup' %}" enctype="multipart/form-data" class="addGroup">
+                {% csrf_token %}
+                <div class="form-group ">
+                    <label for="{{ form.groupName.id_for_label }}">Nazwa grupy</label>
+                    {{ form.groupName }}
+                    {{ form.groupFile }}
+                    <button type="submit" class="btn btn-primary" value="Submit">Stwórz grupę</button>
+                </div>
+            </form>
+        </div>
+        <div class="col-xl-8">
+            <h3>Ranking Światowy</h3>
+            <table class="table table-hover table-dark table-stripped table-sm">
+                <thead>
+                    <tr>
                         <th>Lp.
                         <th>Pkt rankingowe
                         <th>Imię
                         <th>Nazwisko
                         <th>Nr albumu
                         <th>Grupa
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>1   
-                            <td>500
-                            <td>Mateusz
-                            <td>Bogacki
-                            <td>111222
-                            <td>Grupa_10-45
-                            <td><button class="btn btn-primary btn-sm">Pokaż</button>
-                            <td><button class="btn btn-info btn-sm">Edytuj</button>
-                            <td><button class="btn btn-danger btn-sm">Usuń</button>
-                            <td><button class="btn btn-basic btn-sm">Napisz</button>
-                        </tr>
-                        <tr>
-                            <td>1   
-                            <td>500
-                            <td>Mateusz
-                            <td>Bogacki
-                            <td>111222
-                            <td>Grupa_10-45
-                            <td><button class="btn btn-primary btn-sm">Pokaż</button>
-                            <td><button class="btn btn-info btn-sm">Edytuj</button>
-                            <td><button class="btn btn-danger btn-sm">Usuń</button>
-                            <td><button class="btn btn-basic btn-sm">Napisz</button>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for rank in global_rank %}
+                    <tr>
+                        <td>{{ forloop.counter }}
+                        <td>{{ rank.points }}
+                        <td>{{ rank.first_name }}
+                        <td>{{ rank.last_name }}
+                        <td>{{ rank.id_number }}
+                        <td>{{ rank.group }}
+                        <td><a href="{% url 'adminSite:editStudent' rank.student_id %}"><button class="btn btn-primary btn-sm">Pokaż</button></a>
+                        <td><a href="#"><button class="btn btn-info btn-sm">Edytuj</button></a>
+                        <td><a href="{% url 'adminSite:deleteStudent' rank.student_id %}"><button class="btn btn-danger btn-sm">Usuń</button></a>
+                        <td><a href="#"><button class="btn btn-basic btn-sm">Napisz</button></a>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
         </div>
+
     </div>
+</div>
 {% endblock %}
