--- a/templates/admin/groups.html
+++ b/templates/admin/groups.html
@@ -54,6 +54,7 @@
                     <button type="submit" class="btn btn-primary" value="Submit">Stwórz grupę</button>
                 </div>
             </form>
+            <a href="{% url 'adminSite:stageStatus' %}" class="btn btn-primary" >Uaktualnij statusy ćwiczeń</a>
         </div>
         <div class="col-xl-8">
             <h3>Ranking Światowy</h3>
