--- a/templates/main/settings.html
+++ b/templates/main/settings.html
@@ -6,7 +6,7 @@
     <div class="settingsContent">
         <a href="{% url 'main:reportError' %}"><button class="btn">Zgłoś błąd</button></a>
         <a href="{% url 'main:faq' %}"><button class="btn">FAQ</button></a>
-        <a href="{% url 'main:faq' %}"><button class="btn">Zmień hasło</button></a>
+        <a href="{% url 'main:changePassword' %}"><button class="btn">Zmień hasło</button></a>
     </div>
 </div>
 {% endblock %}
