--- a/static/css/changePassword.css
+++ b/static/css/changePassword.css
@@ -1,92 +1,42 @@
-body {
-    background-color: #3b3b3b;
-    background-image: url("../img/bg_login2.jpg");
-    background-position-x: center;
-    background-size: cover;
-    background-attachment: fixed;
-}
-
-.mainPanel {
+.changePassword h1{
     text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
 }
-.formLabel{
-    margin-bottom: 3%;
-    margin-top: 10%;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    color: #3b3b3b;
-    display: block;
-    font-size: 150%;
-    text-shadow: 0 0 1px silver;
-    font-weight: bold;
-}
-.textbox{
-    display: block;
-    -webkit-box-sizing: content-box;
-    -moz-box-sizing: content-box;
-    box-sizing: content-box;
-    border: 3px solid #666666;
-    -webkit-border-radius: 10px;
-    border-radius: 10px;
-    font: normal 16px/normal "Times New Roman", Times, serif;
-    color: rgba(96,96,96,1);
-    -o-text-overflow: clip;
-    text-overflow: clip;
-    background: rgba(252,252,252,1);
-    -webkit-box-shadow: 2px 2px 2px 0 rgba(0,0,0,0.2) inset;
-    box-shadow: 2px 2px 2px 0 rgba(0,0,0,0.2) inset;
-    text-shadow: 1px 1px 0 rgba(255,255,255,0.66) ;
-    width:94%;
-    height:30px;
-    margin-right: auto;
+.changePassword form{
+    width: 40%;
     margin-left: auto;
-    padding-left: 3%;
+    margin-right: auto;
 }
-.textbox:hover{
-    border-color: #8a8a8a;
+.changePassword label{
+    margin-top: 2rem;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
 }
-.bottom{
-    margin-top: 20%;
+.changePassword input{
+   width: 100%;
+   border-radius: 10px;
+   padding: 5px;
 }
-.button {
-    margin-top:30px;
-    -webkit-border-radius: 8;
-    -moz-border-radius: 8;
-    border-radius: 8px;
-    font-family: Georgia;
-    font-weight: bold;
-    color: #000000;
-    font-size: 150%;
-    background: #e08600;
-    border: solid rgba(96,96,96,1) 3px;
-    text-decoration: none;
-    width: 80%;
+.changePassword ul{
+   margin-top: 1rem;
+   display: none;
 }
-
-.button:hover {
-background: #eb9d00;
-text-decoration: none;
+.changePassword li{
+   color: grey;
+   line-height: 1.8rem;
 }
-.alt {
-    display: block;
-    border: 1px solid red;
+.changePassword .sumbitButton{
+    width: 25%;
+    margin-left: 37.5%;
+    margin-top: 2rem;
+    background-color: orange;
+    border-radius: 10px;
+    height: 4rem;
 }
-@media screen and (max-width: 786px){
-    .mainPanel {
-        width: 60%;
-    }
-    .formLabel {
-        font-size: 200%;
-    }
-}
-@media screen and (max-width: 576px){
-    .mainPanel{
-        width: 90%;
-    }
-    .formLabel {
-        font-size: 150%;
-    }
+.changePassword .alert{
+    margin-top: 2rem;
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
 }
