--- a/templates/main/base.html
+++ b/templates/main/base.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="{% static 'css/lesson.css' %}" />
     <link rel="stylesheet" href="{% static 'css/messages.css' %}" />
     <link rel="stylesheet" href="{% static 'css/settings.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/changePassword.css' %}" />
 </head>
 
 <body>
