--- a/templates/admin/groupDetails.html
+++ b/templates/admin/groupDetails.html
@@ -59,7 +59,7 @@
     </div>
     <div class="row">
         <div class="col">
-            <h3>Grupa_10-45</h3>
+            <h3>Czasy etapów dla grupy : {{group.name}}</h3>
             <table class="table table-dark table-striped table-responsive-sm table-sm">
                 <thead>
                         <tr>
@@ -69,28 +69,33 @@
                         </tr>
                     </thead>
                     <tbody>
+                    <form action="{% url 'adminSite:groupDetails' group.id %}" method="POST">
+                        {% csrf_token %}
                         {% for stage in stages %}
-                        <tr>
-                            <th scope="row">{{stage.id}}</th>
-                            <td>
-                                <div class="form-group">
-                                    <input id="datePicker1 + {{stage.id}}" type="datetime-local" name="bday" max="3000-12-31" 
-                                        min="1000-01-01" class="form-control dateClass">
-                                </div>
-                            </td>
-                            <td>
-                                <input id="datePicker2 + {{stage.id}}" type="datetime-local" name="bday" max="3000-12-31" 
-                                    min="1000-01-01" class="form-control dateClass">
-                            </td>
-                        </tr>
+                            <tr>
+                                <input type="hidden" name="group_id" value="{{group.id}}">
+                                <th scope="row">{{stage.id}}</th>
+                                <td>
+                                    <div class="form-group">
+                                        <input id="datePicker1 + {{stage.id}}" name="min_{{stage.id}}" type="datetime-local" name="bday" max="3000-12-31" 
+                                            min="1000-01-01" class="form-control dateClass" value="{{stage.date_min|date:'Y-m-d'}}T{{stage.date_min|date:'h:m'}}">
+                                    </div>
+                                </td>
+                                <td>
+                                    <input id="datePicker2 + {{stage.id}}" name="max_{{stage.id}}" type="datetime-local" name="bday" max="3000-12-31" 
+                                        min="1000-01-01" class="form-control dateClass" value="{{stage.date_max|date:'Y-m-d'}}T{{stage.date_max|date:'h:m'}}">
+                                </td>
+                            </tr>
                         {% endfor %}
+                        
                 </tbody>
             </table>
-            <button class="btn btn-primary btn-sm">Zachowaj zmiany</button>
+            <button type="submit" class="btn btn-primary btn-sm">Zachowaj zmiany</button>
+        </form>
         </div>
         <div class="col">
             <h3>Dodaj nowego studenta</h3>
-            <form method="POST" action="{% url 'adminSite:addStudentToGroup' group_id %}">
+            <form method="POST" action="{% url 'adminSite:addStudentToGroup' group.id %}">
                     {% csrf_token %}
                 <div class="form-group">
                     {% if students_without_group %}
@@ -110,13 +115,6 @@
     </div>
 </div>
 <script>
-     var elements = document.getElementsByClassName("dateClass");
-     var index = [];
-     for(var i=0; i<elements.length; i++) {
-        index.push(elements[i].id); 
-     }
-     for(var i=0; i<index.length; i++) {
-        document.getElementById(index[i]).value = new Date().toISOString().substring(0, 16);
-     }
+     
 </script>
 {% endblock %}
