--- a/templates/main/playerProfile.html
+++ b/templates/main/playerProfile.html
@@ -7,7 +7,7 @@
     <div class="container tabs">
         <ul id="navProfile" class="nav nav-tabs">
             <li class="active"><a data-toggle="tab" href="#excercises">Zadanie główne</a></li>
-            <li><a data-toggle="tab" href="#challenges">Wyzwania</a></li>
+            <li style="display:none"><a data-toggle="tab" href="#challenges">Wyzwania</a></li>
             <li><a data-toggle="tab" href="#presences">Obecności</a></li>
             <li><a data-toggle="tab" href="#medals">Medale</a></li>
             <li><a data-toggle="tab" href="#rating">Ocena</a></li>
@@ -62,7 +62,7 @@
             </div>
             
             <!-- WYZWANIA -->
-            <div id="challenges" class="tab-pane fade">
+            <div id="challenges" class="tab-pane fade" style="display:none">
                 <h3 class="text-center">Wyzwania</h3>
                 <table class="table presencesTable">
                         <thead>
