--- a/templates/admin/groups.html
+++ b/templates/admin/groups.html
@@ -25,11 +25,7 @@
                 </tbody>
             </table>
             {% else %}
-            <div class="alert alert-warning alert-dismissible fade show" role="alert"> Brak prowadzonych grup
-                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
+            <div class="alert alert-warning" role="alert"> Brak prowadzonych grup </div>
             {% endif %}
             {% if message != None and message %}
             <div class="alert alert-success alert-dismissible fade show" role="alert"> Grupa pomyślnie utworzona
