--- a/templates/admin/responses.html
+++ b/templates/admin/responses.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="container responseContent">
     <h1 align="center">Rozwiązania</h1>
-    {% if answers.Count > 0 %}
+    {% if answers %}
         <table class="table-striped table-dark">
             <thead>
                 <tr>
